# rules_tensorrt

./: .bazelignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  MODULE.bazel  README.md  WORKSPACE.bazel  extensions.bzl  repo.bzl
.bcr/: metadata.template.json
.github/workflows/: release.yaml
private/: repository.bzl
private/template/: trt.tpl
test/bzlmod/: BUILD.bazel  MODULE.bazel  main.cc
test/legacy/: .bazelrc  WORKSPACE
