module(
    name = "rules_tensorrt",
    version = "10.15.1",
    compatibility_level = 1,
)

bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "rules_cuda", version = "0.2.5")
git_override(
    module_name = "rules_cuda",
    commit = "6fa09c37b1f98c3ac0d5a3276269693cee16765b",  # Feb 6, 2026, to bazel 9
    remote = "https://github.com/bazel-contrib/rules_cuda",
)
